--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,12 @@ p {
 }
 .clr {
   clear: both;
+}
   .l-heading {
     font-size: 40px;
+    line-height: 1.2;
   }
-}
+
 
 /* NAvbar */
 #navbar {
@@ -70,7 +72,7 @@ p {
 #navbar a {
   color: white;
 }
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
   margin-left: 20px;
@@ -133,7 +135,7 @@ p {
   color: brown;
 }
 #home-info {
-  height: 400px;
+  height: 450px;
 }
 #home-info .info-img {
   float: left;
@@ -148,7 +150,7 @@ p {
   float: right;
   width: 50%;
   text-align: center;
-  overflow: auto;
+  overflow: hidden;
 }
 #home-info .info-content p {
   padding-bottom: 30px;
@@ -191,7 +193,7 @@ p {
 
 #testimonials {
   padding: 30px;
-  height: 600px;
+  height: 100%;
   background: url("../img/test-bg.jpg") no-repeat center center/cover;
   padding-top: 40px;
 }
